fix project spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -812,7 +812,7 @@ a {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 84vw;
+	width: 82vw;
 	padding: 2em 2em;
 	margin-top: 2em;
 	margin-bottom: 2em;
@@ -835,7 +835,7 @@ a {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 84vw;
+	width: 82vw;
 	padding: 2em 2em;
 	margin-top: 2em;
 	margin-bottom: 2em;
